@@ -7246,9 +7246,8 @@ int resolveJumpChain (pCode *pc, pCode **target, pCodeOp **pcop) {
 pCode *skipJumptables (pCode *pc, int *isJumptable)
 {
   *isJumptable = 0;
-  if (!pc) return NULL;
 
-  while (pc->type == PC_INFO && PCINF(pc)->type == INF_OPTIMIZATION && PCOO(PCINF(pc)->oper1)->type == OPT_JUMPTABLE_BEGIN) {
+  while (pc && pc->type == PC_INFO && PCINF(pc)->type == INF_OPTIMIZATION && PCOO(PCINF(pc)->oper1)->type == OPT_JUMPTABLE_BEGIN) {
     *isJumptable = 1;
     //fprintf (stderr, "SKIPPING jumptable\n");
     do {
@@ -7948,7 +7947,7 @@ static void pic16_convertLocalRegs2Support(pCode *pcstart, pCode *pcend, int cou
 //        pc->next = NULL;
 //        pc->prev = NULL;
       }
-    } while ((pc) && (pc != pcend));
+    } while (pc != pcend);
 
     /* unlink movff instructions */
     pcstart->next = pcend;
